fix emoji alignment

--- a/components/EmoLink/EmoLink.module.css
+++ b/components/EmoLink/EmoLink.module.css
@@ -1,7 +1,7 @@
 .LinkWrapper {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: start;
 }
 
 .Emoji {
